<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Livo</string>
    <string name="noConnection">No Internet</string>
    <string name="turnOnInternet">Your device is not connected to internet.turn on your internet connection</string>
    <string name="mobileData">Mobile Data</string>
    <string name="wifi">Wifi</string>
    <string name="you_are_offline_please_check_your_internet_connection">You are offline. Please check your internet connection</string>
    <string name="enter_secure_code">Enter Secure Code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="send_secure_code">Send Secure Code</string>
    <string name="search">Search</string>
    <string name="denmark">Denmark</string>
    <string name="sweden">Sweden</string>
    <string name="swedish">Swedish</string>
    <string name="choose_language">Choose Language</string>
    <string name="select_country_code">Select Country Code</string>
    <string name="apply">Apply</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="englishTitle">English</string>
    <string name="denish">Danish</string>
    <string name="home">Home</string>
    <string name="listing">Listing</string>
    <string name="chats">Chats</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="message">Message</string>
    <string name="phone">Phone</string>
    <string name="contact_admin">Contact Admin</string>
    <string name="offers">offers</string>
    <string name="new_update_available">New update is available</string>
    <string name="new_version_of_application_is_available_on_app_store_update_now">New version of application is available on App Store. Update Now!</string>
    <string name="youve_recieved">You\'ve recieved</string>
    <string name="update_now">Update Now</string>
    <string name="update_later">Update Later</string>
    <string name="please_turn_on_permisssion">Please Turn on permissions</string>
    <string name="our_application_needs_few_system_level_permissions_for_crucial_functioning_of_the_application.">Our application needs few system level permissions for crucial functioning of the application.</string>
    <string name="listing_has_been_suspended">Listing has been suspended</string>
    <string name="Your_listing_was_suspended_by_Livo_admin_Please_contact_admin_to_know_further_details">Your listing was suspended by Livo admin. Please contact admin to know further details</string>
    <string name="data_modified">Date Modified</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="published">Published</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="suspended">Suspended</string>
    <string name="expired">Expired</string>
    <string name="sender">Sender</string>
    <string name="transpoter">Transporter</string>
    <string name="show_only_my_offers">Show only my offers</string>
    <string name="reset_all">Reset all</string>
    <string name="SORT_BY">SORT BY</string>
    <string name="FILTER">FILTER</string>
    <string name="incomplete_profile_warning">Incomplete Profile Warning</string>
    <string name="your_profile_is_incomplete_an_incomplete_profile_may_prevent_you_from_creating_the_listing_or_bidding_on_listing_please_update_your_profile">Your profile is incomplete. An incomplete profile may prevent you from creating the listing or bidding on listing. Please update your profile.</string>
    <string name="update_profile">Update Profile</string>
    <string name="nearest_pickup">Nearest Pickup</string>
    <string name="highest_price">Highest Price</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="FILTERS">FILTERS</string>
    <string name="Offer_Sent_Successfully">Offer Sent \n Successfully</string>
    <string name="remove">Remove</string>
    <string name="send_offer">Send Offer</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_listing">Delete Listing</string>
    <string name="are_you_sure_you_want_to_delete_this_listing">Are you sure you want to delete this listing?</string>
    <string name="cancel">Cancel</string>
    <string name="update_offer">Update Offer</string>
    <string name="delete_now">Delete Now</string>
    <string name="submit_transporter_application">Submit Transporter Application</string>
    <string name="seems_like_you_are_not_approved_transporter_yet_you_can_submit_an_application_on_Livo_to_become_an_transporter.">Seems like you are not approved transporter yet. You can submit an application on Livo to become an transporter.</string>
    <string name="a_notification_will_also_be_sent_out_to_sender_to_inform_listing_price_has_been_updated">A notification will also be sent out to sender to inform listing price has been updated</string>
    <string name="farudulent_item">Farudulent Item</string>
    <string name="spam">Spam</string>
    <string name="against_policy">Against Policy</string>
    <string name="suspicious_user">Suspicious User</string>
    <string name="item_doesnt_match_description">Item doesn\'t match description</string>
    <string name="help_community_keep_safe_for_everyone">Help community keep \nsafe for everyone</string>
    <string name="Select_one_or_more_reason_below_for_marking_this_listing_inappropriate">Select one or more reason below for marking this listing inappropriate</string>
    <string name="my_listing">My Listings</string>
    <string name="my_offers">My Offers</string>
    <string name="other_listings">Other Listings</string>
    <string name="show_all">Show all</string>
    <string name="show_less">Show less</string>
    <string name="notifications">Notifications</string>
    <string name="process">Process</string>
    <string name="submit_request">Submit Request</string>
    <string name="stripe_setup">Stripe Setup</string>
    <string name="shareapp">Share App </string>
    <string name="listing_successfully_deleted">Listing Successfully Deleted</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="applang">Change Language / skift sprog / Ändra språk </string>
    <string name="total_amount">Total Amount</string>
    <string name="adjust_price">Adjust Price</string>
    <string name="please_enter_valid_email_address">Please enter valid email address</string>
    <string name="minimum_listing_price_should_be">Minimum listing price should be </string>
   <string name="something_went_wrong">Something went wrong</string>
    <string name="swipe_to_send_complete_request">Swipe to send complete request</string>
    <string name="confirm_change">Confirm Change</string>
    <string name="discard_image">Discard Image?</string>
    <string name="are_you_sure_you_want_to_discard_this_item">Are you sure you want to discard this image?</string>
    <string name="okay">Ok</string>
    <string name="note">Note : </string>
    <string name="recommended_amount_is_calculated_based_on_your_listing_size_not_travel_distance">Recommended amount is calculated based on your listing size not travel distance</string>
    <string name="listing_amount">Listing Amount</string>
    <string name="livo_fee">Livo Fee</string>
    <string name="total_amount_payable">Total Amount Payable</string>
    <string name="kindly_wait_while_we_create_listing">Kindly wait while we create listing . . .</string>
    <string name="upload_address_proof">Upload Address Proof</string>
    <string name="address_proof">Address Proof</string>
    <string name="identity_proof">Identity Proof</string>
    <string name="postal_code"></string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="submit_otp">SUBMIT OTP</string>
    <string name="update_number">Update Number</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="expect_detailed_response_within_hrs">Expect detailed response within 24-48 hrs</string>
    <string name="we_are_open_10am_to_6pm">We are open 10am to 6pm</string>
    <string name="facebook_messanger">Facebook Messanger</string>
    <string name="email_us">Email Us</string>
    <string name="call_us">Call Us</string>
    <string name="chat_with_us">Chat With Us</string>
    <string name="contact_support">Contact Support</string>
    <string name="approve_transporter">Approve</string>
    <string name="make_payment">Make Payment</string>
    <string name="waiting_Transporter_approval"> Waiting For Transporter Approval</string>
    <string name="not_interested">Not Interested</string>
    <string name="message_sender">Message Sender</string>
    <string name="pickup_message">Message Transporter</string>
    <string name="listing_completed_successfully">Listing Completed \n Successfully!</string>
    <string name="accept_sender">Accept</string>
    <string name="decline">Decline</string>
    <string name="delete_offer">Delete Offer</string>
    <string name="change_price">Change Price</string>
    <string name="waiting_payment_approval">Waiting for payment approval</string>
    <string name="waiting_sender_payment">Waiting for sender to make payment</string>
    <string name="open_map">Open Map</string>
    <string name="i_need_help_with_this_lListing">I need help with this listing</string>
    <string name="message_transpoter">Message Transpoter</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_method_capital">PAYMENT METHOD</string>
    <string name="complete_transaction">Complete Transaction</string>
    <string name="take_picture">Take Picture</string>
    <string name="offer_price">Offer Price</string>
    <string name="take_pic">Take pic</string>
    <string name="take__a_picture_of_your_item">Take a picture of your item</string>
    <string name="upload">Upload</string>
    <string name="view_all">view all</string>
    <string name="listing_picked_up">Listing Picked Up</string>
    <string name="listing_delivered">Listing Delivered</string>
    <string name="request_help">Request Help</string>
    <string name="view_listings">View listings</string>
    <string name="completed_listings">Completed listings</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="describe_your_concern">Describe Your Concern</string>
    <string name="select_product">Select Product</string>
    <string name="issues_with_listing">Issues With Listing</string>
    <string name="select_category">Select Category</string>
    <string name="having_trouble_with_your_listing_or_just_have_a_query_for_us_let_s_chat">Having trouble with your listing or just have a query for us? Let\'s Chat!</string>
    <string name="testdata">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat. Lorem ipsum dolor sit amet, consetetur sadipscing elitr.
     Invidunt ut labore et dolore magna aliquyam erat. Lorem ipsum dolor sit amet, consetetur sadipscing.</string>
    <string name="enable_notification_sounds">Enable Notification Sounds</string>
    <string name="sound">Sounds</string>
    <string name="item_dropped_of">Item Dropped Off</string>
    <string name="item_picked_up">Item Picked Up</string>
    <string name="email">Email</string>
</resources>