<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:background="@drawable/white_round_shape"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlMainInternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rlView"
                    android:layout_width="60dp"
                    android:layout_height="5dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/grey_round_shape_45_opacity" >

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/icon_suspended" />

                    <TextView
                        android:id="@+id/tvSuspended"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textSize="20dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/barlow_bold"
                        android:text="@string/listing_has_been_suspended" />


                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:fontFamily="@font/barlow_regular"
                        android:textSize="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/Your_listing_was_suspended_by_Livo_admin_Please_contact_admin_to_know_further_details" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">




                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    >

                    <LinearLayout
                        android:id="@+id/llCancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/grey_round_shape_45_opacity"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="8dp"
                        android:paddingBottom="15dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="1dp"
                            android:layout_marginBottom="1dp"
                            android:fontFamily="@font/barlow_bold"
                            android:text="@string/cancel"
                            android:textAlignment="center"
                            android:id="@+id/tvCancel"
                            android:textColor="@color/white"
                            android:textSize="16dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llContactAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/blue_round_shape"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="8dp"
                        android:paddingBottom="15dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:layout_marginBottom="1dp"
                            android:fontFamily="@font/barlow_bold"
                            android:text="@string/contact_admin"
                            android:textAlignment="center"
                            android:id="@+id/tvContactAdmin"
                            android:textColor="@color/white"
                            android:textSize="16dp" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>

</layout>